2001-05-25  Klaus Reichl  <Klaus.Reichl@alcatel.at>

	* stage2/stage2.c (print_entries_raw): New function.
	(run_menu): Use it to implement menu & command-list if on dumb
	terminals.  
	Changes are:
	  Adjust FIRST_ENTRY only on non-dumb terminals.
	  Setting of SHOW_MENU is honoured also on dumb
	    terminals. 
	  Likely if SHOW_MENU is false, ESC brings her to the
	    menu - not to the command-line as before.
	  PRINT_BORDER, GOTOXY, SET_LINE_xxx are only called if
	    not on dumb terminals.
	  Show entry number when timeout is running if terminal is dumb.
	  Prompt with entry number when waiting for keys.

2001-05-14  Pavel Roskin  <proski@gnu.org>

	* stage2/shared.h (ENTRY): Remove unnecessary `##'.

2001-05-03  Jochen Hoenicke  <jochen@gnu.org>

	* grub/asmstub.c (biosdisk): Work around a bug in linux's ez
	remapping.  Problem reported by Ben Byer <bbyer@rice.edu>.
	
2001-03-28  Gordon Matzigkeit  <gord@fig.org>

	* stage2/boot.c (load_image): Don't cast entry_addr to an int, or
	the top bit will be interpreted as the sign.

2001-03-16  OKUJI Yoshinori  <okuji@gnu.org>

	From Bodo Rueskamp <br@itchigo.com>:
	* stage2/boot.c (load_initrd): Avoid the last 64kb for
	Linux 2.2.x bug.
	
2001-03-03  OKUJI Yoshinori  <okuji@gnu.org>

	* docs/multiboot.texi (History): Written.
	
2001-02-28  OKUJI Yoshinori  <okuji@gnu.org>

	From HASEGAWA Tomoki <thasegawa@mta.biglobe.ne.jp>:
	* lib/device.c (get_ide_disk_name) [__FreeBSD__]: Add support
	for FreeBSD-4.0 or later. Use "/dev/rad0".
	* util/grub-install.in (convert): Add code for FreeBSD
	disklabels.

2001-02-28  OKUJI Yoshinori  <okuji@gnu.org>

	From Thierry Laronde <thierry@cri74.org>:
	* stage2/stage2.c (cmain): If the default entry is wrong, set it
	to FALLBACK_ENTRY if FALLBACK_ENTRY is valid, otherwise set it
	to zero. Suggested by Nicolas Boos <nicolas.boos@wanadoo.fr>.
	
2001-02-28  OKUJI Yoshinori  <okuji@gnu.org>

	* acconfig.h (AUTO_LINUX_MEM_OPT): New entry.