@@ -1,6 +1,3 @@
 # Do not change this order if you don't know what you are doing.
-SUBDIRS = netboot stage2 stage1 lib grub util docs debian
+SUBDIRS = netboot stage2 stage1 lib grub util docs
 EXTRA_DIST = BUGS
-
-# We get $(PACKAGE) and $(VERSION) from debian/changelog.
-configure: debian/changelog
